test/15-Typing/Signatures/Bad/EffectMaybe/Test.ds

fun 	<: a -(!e1)> a
	:- !e1 = Maybe
	
fun x = x